--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
     "name": "eapply",
     "version": "0.0.1",
     "main": "eapply.js",
+    "__devDependencies": {
+        "bash.origin.test": "^0.1.40"
+    },
     "devDependencies": {
         "mocha": "^6.1.4"
     },
     "scripts": {
-        "test": "mocha tests.js"
+        "test": "bash.origin.test tests"
     },
     "dependencies": {
         "deep-object-diff": "^1.1.0",
         "lodash": "^4.17.11",
-        "traverse": "^0.6.6"
+        "traverse": "^0.6.6",
+        "codeblock": "^0.3.14"
     }
 }
