--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-    "name": "eapply",
-    "version": "0.0.1",
-    "main": "eapply.js",
-    "__devDependencies": {
-        "bash.origin.test": "^0.1.40"
-    },
-    "scripts": {
-        "test": "bash.origin.test tests"
-    },
-    "dependencies": {
-        "deep-object-diff": "^1.1.0",
-        "lodash": "^4.17.11",
-        "traverse": "^0.6.6",
-        "codeblock": "^0.3.14"
-    }
+  "name": "eapply",
+  "version": "0.0.2-pre.0",
+  "main": "eapply.js",
+  "scripts": {
+    "test": "bash.origin.test tests"
+  },
+  "dependencies": {
+    "deep-object-diff": "^1.1.0",
+    "lodash": "^4.17.11",
+    "traverse": "^0.6.6",
+    "codeblock": "^0.3.15"
+  },
+  "devDependencies": {
+    "bash.origin.test": "^0.2.0-pre.0"
+  }
 }
